# signal-translator

./: CMakeLists.txt  dbusListener.cpp  dbusListener.h  direction-client-glue.h  main.cpp  readme.md
include/: commandexecutor.h
src/: commandexecutor.cpp  main.cpp
